--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "casperjs": "~1.1.0",
     "express": "~4.6",
-    "casperjs": "~1.1.0"
+    "redis": "^0.12.1"
   },
   "scripts": {
     "prepublish": "npm prune",
@@ -28,4 +29,3 @@
   },
   "homepage": "http://www.dropchart.io"
 }
-
